--- a/kumail.moe.conf
+++ b/kumail.moe.conf
@@ -2,21 +2,21 @@ server {
     listen       80;
     server_name  www.kumail.moe;
     location / {
-        root  /var/www/html/dist; 
+        root  /root/code/myweb-fe/dist; 
         index  index.html;
     }
     location /chatgpt {
-        alias /var/www/html/dist;
+        alias /root/code/myweb-fe/dist; 
         try_files $uri $uri/ /index.html;
     }
 
     location /eat {
-        alias /var/www/html/dist;
+        alias /root/code/myweb-fe/dist; 
         try_files $uri $uri/ /index.html;
     }
 
     location /geneimg {
-        alias /var/www/html/dist;
+        alias /root/code/myweb-fe/dist; 
         try_files $uri $uri/ /index.html;
     }
 
