--- a/kumail.moe.conf
+++ b/kumail.moe.conf
@@ -2,21 +2,21 @@ server {
     listen       80;
     server_name  www.kumail.moe;
     location / {
-        root  /root/code/myweb-fe/dist; 
+        root  /var/www/html/dist; 
         index  index.html;
     }
     location /chatgpt {
-        alias /root/code/myweb-fe/dist; 
+        alias /var/www/html/dist; 
         try_files $uri $uri/ /index.html;
     }
 
     location /eat {
-        alias /root/code/myweb-fe/dist; 
+        alias /var/www/html/dist; 
         try_files $uri $uri/ /index.html;
     }
 
     location /geneimg {
-        alias /root/code/myweb-fe/dist; 
+        alias /var/www/html/dist; 
         try_files $uri $uri/ /index.html;
     }
 
@@ -27,3 +27,5 @@ server {
     server_name kumail.moe;
     return 301 $scheme://www.kumail.moe$request_uri;
 }
+
+## ln -s /root/code/myweb-fe/dist /var/www/html/dist
