--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.14",
+    "file-loader": "^6.2.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1",
